[package]
name = "treeshark"
version = "0.4.0"
edition = "2021"
description = "🦈 Hunt down the biggest files devouring your disk — blazingly fast"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }   # embedded sqlite
rayon = "1"                                                # TRUE parallelism — recursive work-stealing
num_cpus = "1"                                             # detect cores
parking_lot = "0.12"                                       # fast mutex
bytesize = { version = "1", features = ["serde"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
indicatif = "0.17"
dirs = "5"
anyhow = "1"
ctrlc = "3"                                                # graceful interrupt for resume

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
